Bug fix and changed content alignment

--- a/styles/blog.css
+++ b/styles/blog.css
@@ -6,6 +6,11 @@ body {
     text-align: center;
 }
 
+.content-div {
+    padding-top: 10px;
+    padding-bottom: 20px;
+}
+
 .name-block {
     padding-top: 100px;
     font-size: 30px;
@@ -20,8 +25,8 @@ body {
 }
 
 .title {
-    padding-top: 80px;
-    padding-bottom: 10px;
+    padding-top: 30px;
+    padding-bottom: 20px;
     font-size: 30px;
     color: rgb(86, 223, 159);
 }
